Started figuring out some ui challenge, but fixed ships on mobile instead.

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,8 @@
 }
 
 main {
-  @apply grid md:grid-cols-2 grid-cols-1 gap-1 my-5 mx-auto w-8/12 md:max-w-full;
+  @apply grid md:grid-cols-2 grid-cols-1 gap-1;
+  @apply my-5 mx-auto w-11/12 md:w-8/12 md:max-w-full;
 }
 
 h1 {
